--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
+    "mysql2": "^3.15.3",
     "openai": "^6.9.1",
     "pg": "^8.11.3",
     "pino": "^8.17.2",
